--- a/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
@@ -1,4 +1,4 @@
-<div><b>🟢🛠️🚧 IN PROGRESS 🚧🛠️🟢</b></div>
+<div class="w-100 d-flex justify-content-center mb-4"><b>🟢🛠️🚧 IN PROGRESS 🚧🛠️🟢</b></div>
 
 <div *ngFor="let line of correspondenceBook" class="d-flex flex-row mb-2">
 
@@ -98,7 +98,7 @@
 
 
             <div class="card-footer">
-                <button type="button" class="btn btn-primary m-0" (click)="addNewEntry()">dodaj Wpis
+                <button type="button" class="btn btn-primary m-0 w-100" (click)="addNewEntry()">dodaj Wpis
                     <i class="fas fa-plus-circle    "></i>
                 </button>
             </div>
