--- a/radio-operator-toolbox-angular/src/app/pages/encodings-page/vigenere-tab/vigenere-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/encodings-page/vigenere-tab/vigenere-tab.component.html
@@ -1,4 +1,5 @@
-<div><b>🟢🛠️🚧 IN PROGRESS 🚧🛠️🟢</b></div>
+<div class="w-100 d-flex justify-content-center mb-4"><b>🟢🛠️🚧 IN PROGRESS 🚧🛠️🟢</b></div>
+
 
 <a href="https://pl.wikipedia.org/wiki/Szyfr_Vigen%C3%A8re%E2%80%99a">https://pl.wikipedia.org/wiki/Szyfr_Vigenere'a</a>
 
