--- a/radio-operator-toolbox-angular/src/styles.scss
+++ b/radio-operator-toolbox-angular/src/styles.scss
@@ -24,7 +24,7 @@ img {
     font-family: 'Dosis-Medium', sans-serif;
 }
 
-
+// BOOTSTRAP OVERRIDES
 .btn {
     margin: 2px;
     padding: 2px;
@@ -80,37 +80,47 @@ select {
     color: green;
 }
 
-.w-90{
+.modal-header,
+.modal-footer {
+    background-color: lightcyan;
+}
+
+.w-90 {
     width: 90%;
 }
 
-.w-80{
+.w-80 {
     width: 80%;
 }
 
-.w-10{
+.w-10 {
     width: 10%;
 }
 
-.w-20{
+.w-20 {
     width: 20%;
 }
 
-.w-33{
+.w-33 {
     width: 33%;
 }
 
-
-.w-2em{
+.w-2em {
     width: 2em;
+    min-width: 2em;
+    max-width: 2em;
 }
 
-.w-3em{
+.w-3em {
     width: 3em;
+    min-width: 3em;
+    max-width: 3em;
 }
 
-.w-4em{
+.w-4em {
     width: 4em;
+    min-width: 4em;
+    max-width: 4em;
 }
 
 
