--- a/radio-operator-toolbox-angular/src/styles.scss
+++ b/radio-operator-toolbox-angular/src/styles.scss
@@ -51,7 +51,7 @@ img {
         // opacity: 1;
         /* Firefox */
     }
-    
+
     input::-ms-input-placeholder {
         /* Edge 12 -18 */
         color: rgb(164, 164, 164);
@@ -60,7 +60,7 @@ img {
 
 .input-group-text {
     background-color: #e9e9e9;
-    box-shadow: 4px 4px 6px 1px rgb(75, 75, 75);    
+    box-shadow: 4px 4px 6px 1px rgb(75, 75, 75);
 }
 
 .form-control {
@@ -92,13 +92,20 @@ select {
 }
 
 .modal-header,
+.modal-body,
 .modal-footer {
     background-color: lightcyan;
     padding: 0.5em;
 
-    .btn-close{
-        margin-right: 0.2em;
+    .btn-close {
+        margin-right: 0.25em;
     }
+}
+
+.card-header,
+.card-body,
+.card-footer {
+    padding: 0.25em;
 }
 
 .w-90 {
