--- a/radio-operator-toolbox-angular/src/app/pages/app-settings-page/app-settings-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/app-settings-page/app-settings-page.component.html
@@ -1,5 +1,5 @@
 <div class="card mb-4">
-    <div class="card-header p-1">Ustawienia</div>
+    <h5 class="card-header p-1">Ustawienia</h5>
     <div class="card-body">
         <div class="d-flex flex-row justify-content-between">
             <label class="form-check-label" for="flexCheckDefault">
