--- a/radio-operator-toolbox-angular/src/app/pages/cheatsheet-page/cheatsheet-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/cheatsheet-page/cheatsheet-page.component.html
@@ -1,7 +1,7 @@
 <app-help-tile [content]="helpLines"></app-help-tile>
 
 <div class="card mb-4">
-    <div class="card-header p-1">Długośc Antent KF:</div>
+    <h5 class="card-header p-1">Długośc Antent KF:</h5>
     <div class="card-body p-1">
         <div>dlugosc fali: λ=c/f</div>
         <div>polowa fali=dlugosc ramiena anteny (dipola)</div>
@@ -26,7 +26,7 @@
 
 
 <div class="card">
-    <div class="card-header p-1">In progress:</div>
+    <h5 class="card-header p-1">In progress:</h5>
     <div class="card-body p-1">
 
         <p>alfabet NATO</p>
