--- a/radio-operator-toolbox-angular/src/app/pages/notepad-page/notepad-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/notepad-page/notepad-page.component.html
@@ -1,24 +1,21 @@
-<div class="m-2">
-    <div>
+<div class="card mb-4">
+    <h5 class="card-header p-1 text-center">
         <app-notepad-navbar (prevPage)="prevPage()" (addPage)="addPage()" (removePage)="showDeletePageModal()"
             (nextPage)="nextPage()"></app-notepad-navbar>
+            <small class="text-muted" for="exampleFormControlTextarea1"> Notatnik, strona: {{getPageIdx(currentPage)+1}} / {{pages.length}}</small>
+    </h5>
+    <div class="card-body p-0">
+        <div class="form-group text-center">
+            <textarea [(ngModel)]="currentPage.pageContent" class="form-control" id="exampleFormControlTextarea2" rows="15"
+                maxlength="4000" placeholder="podreczna notatka, max 4000 znakow"></textarea>
+        </div>
+
     </div>
-
-
-    <div class="form-group text-center my-2">
-        <label for="exampleFormControlTextarea1"> Notatnik, strona: {{getPageIdx(currentPage)+1}} / {{pages.length}}</label>
-        <textarea [(ngModel)]="currentPage.pageContent" class="form-control" id="exampleFormControlTextarea1" rows="15"
-            maxlength="4000" placeholder="podreczna notatka, max 4000 znakow"></textarea>
-    </div>
-
-    <div>
+    <div class="card- p-1">
         <app-notepad-navbar (prevPage)="prevPage()" (addPage)="addPage()" (removePage)="showDeletePageModal()"
-            (nextPage)="nextPage()"></app-notepad-navbar>
+        (nextPage)="nextPage()"></app-notepad-navbar>
     </div>
-
 </div>
-
-
 
 
 
